Add support for asking SMTP password when sending email

MSA: AbstractMSA: Add signal passwordRequested() and slot setPassword() for requesting and setting password
MSA: SMTP: Use MSA passwordRequested() and setPassword() for requesting password before sending emails
Composer: Submission: Use MSA API for requesting and setting password, forward it to parent GUI widget
Gui: ComposeWidget: Use Gui::PasswordDialog for password requests from Composer

BUG: 320616
REVIEW: 112065